Succeed saving the result of search in the temporary database

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,3 @@
-// for h2 database
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2
-spring.datasource.url=jdbc:h2:mem:bugtracker
+spring.datasource.url=jdbc:h2:mem:NewsApi
